# kmdr

./: .gitignore  .golangci.cue  .richstyle.cue  .richstyle.yaml  BUILD  Makefile  README.md  WORKSPACE  go.mod  go.sum  guide.html  main.go
.github/: settings.yml
.github/ISSUE_TEMPLATE/: bug.md  chore.md  feature.md  question.md
.github/workflows/: bazel.yaml  todo.yaml
api/: BUILD.bazel  api.go  api_darwin.go  api_linux.go  api_mock.go  api_windows.go  auth.go  config.go  config_mock_test.go  cue.go  cue_mock.go  cue_mock_test.go  cue_test.go  ktrl.go  ktrl_apply.go  ktrl_mock.go  ktrl_mock_test.go  ktrl_test.go  plan.go  plan_mock_test.go
cmd/: BUILD.bazel  root.go
cmd/apply/: BUILD.bazel  apply.go  apply_test.go
cmd/query/: BUILD.bazel  query.go
cmd/setup/: BUILD.bazel  setup.go  setup_test.go
cmd/version/: BUILD.bazel  version.go  version_test.go
fixtures/: add_user.cue  error.cue  manifest.cue  manifest_error.cue  valid.cue
pkg/: main.go
pkg/cmd/: root.go
pkg/cmd/apply/: apply.go  apply_test.go
pkg/cmd/version/: version.go
pkg/kmdr/: api.go  cue.go  cue_mock.go  cue_test.go
pkg/ktrl/: ktrl.go  ktrl_apply.go  ktrl_test.go
pkg/util/: panic_test.go
static/: base.cue  context.cue  contexts.cue  manifest.cue  users.cue
static/cue.mod/: module.cue
static/cue/kmdr/: config.cue  context.cue  manifest.cue  user.cue
static/kmdr/: contexts.cue  manifest.cue  users.cue
static/templates/: kmdr.gotmpl  kmdr.toml
util/: BUILD.bazel  cmd.go  crypto.go  ktrl.go  panic.go  panic_test.go  util_darwin.go  util_linux.go  util_windows.go
