load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "api.go",
        "cue.go",
        "cue_mock.go",
        "ktrl.go",
        "ktrl_apply.go",
    ],
    importpath = "github.com/proofzero/kmdr/api",
    visibility = ["//visibility:public"],
    deps = [
        "//util",
        "@com_github_adrg_xdg//:xdg",
        "@com_github_golang_mock//gomock",
        "@com_github_imdario_mergo//:mergo",
        "@com_github_mitchellh_go_homedir//:go-homedir",
        "@com_github_proofzero_proto//pkg/v1alpha1",
        "@com_github_spf13_viper//:viper",
        "@org_cuelang_go//cue",
        "@org_cuelang_go//cue/cuecontext",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "api_test",
    srcs = [
        "cue_test.go",
        "ktrl_test.go",
    ],
    embed = [":api"],
    deps = [
        "@com_github_golang_mock//gomock",
        "@com_github_proofzero_proto//pkg/v1alpha1",
        "@com_github_proofzero_proto//pkg/v1alpha1/test",
        "@org_cuelang_go//cue",
        "@org_cuelang_go//cue/cuecontext",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
