load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "api.go",
        "api_darwin.go",
        "api_linux.go",
        "api_windows.go",
        "cue.go",
        "cue_mock.go",
        "ktrl.go",
        "ktrl_mock.go",
    ],
    importpath = "github.com/proofzero/kmdr/api",
    visibility = ["//visibility:public"],
    deps = [
        "//util",
        "//vendor/cuelang.org/go/cue",
        "//vendor/cuelang.org/go/cue/build",
        "//vendor/cuelang.org/go/cue/cuecontext",
        "//vendor/cuelang.org/go/cue/load",
        "//vendor/github.com/adrg/xdg",
        "//vendor/github.com/golang/mock/gomock",
        "//vendor/github.com/mitchellh/go-homedir",
        "//vendor/github.com/proofzero/proto/pkg/v1alpha1",
        "//vendor/github.com/spf13/viper",
        "//vendor/google.golang.org/grpc",
    ],
)

go_test(
    name = "api_test",
    srcs = [
        "cue_test.go",
        "ktrl_test.go",
    ],
    embed = [":api"],
    deps = [
        "//vendor/cuelang.org/go/cue",
        "//vendor/cuelang.org/go/cue/cuecontext",
        "//vendor/github.com/golang/mock/gomock",
        "//vendor/github.com/proofzero/proto/pkg/v1alpha1",
        "//vendor/github.com/proofzero/proto/pkg/v1alpha1/test",
        "//vendor/google.golang.org/grpc",
    ],
)
