load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "api.go",
        "api_mock.go",
        "auth.go",
        "config.go",
        "cue.go",
        "ktrl.go",
        "plan.go",
    ],
    importpath = "github.com/proofzero/kmdr/api",
    visibility = ["//visibility:public"],
    deps = [
        "//util",
        "@com_github_adrg_xdg//:xdg",
        "@com_github_burntsushi_toml//:toml",
        "@com_github_golang_mock//gomock",
        "@com_github_proofzero_proto//pkg/v1alpha1",
        "@com_github_spf13_viper//:viper",
        "@org_cuelang_go//cue",
        "@org_cuelang_go//cue/cuecontext",
        "@org_cuelang_go//cue/load",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_crypto//sha3",
    ],
)

go_test(
    name = "api_test",
    srcs = [
        "config_mock_test.go",
        "cue_mock_test.go",
        "cue_test.go",
        "ktrl_mock_test.go",
        "plan_mock_test.go",
    ],
    embed = [":api"],
    deps = [
        "@com_github_golang_mock//gomock",
        "@com_github_proofzero_proto//pkg/v1alpha1",
        "@org_cuelang_go//cue",
        "@org_cuelang_go//cue/cuecontext",
    ],
)
