load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = ["root.go"],
    importpath = "github.com/proofzero/kmdr/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/apply",
        "//cmd/setup",
        "//cmd/version",
        "//vendor/github.com/mitchellh/go-homedir",
        "//vendor/github.com/spf13/cobra",
        "//vendor/github.com/spf13/viper",
    ],
)
