load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = ["root.go"],
    importpath = "github.com/proofzero/kmdr/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/apply",
        "//cmd/setup",
        "//cmd/version",
        "@com_github_mitchellh_go_homedir//:go-homedir",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
