load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "util",
    srcs = ["panic.go"],
    importpath = "github.com/proofzero/kmdr/util",
    visibility = ["//visibility:public"],
    deps = ["@com_github_fatih_color//:color"],
)

go_test(
    name = "util_test",
    srcs = ["panic_test.go"],
    embed = [":util"],
)
