load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "util",
    srcs = [
        "crypto.go",
        "panic.go",
    ],
    importpath = "github.com/proofzero/kmdr/util",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/fatih/color",
        "//vendor/golang.org/x/crypto/nacl/box",
    ],
)

go_test(
    name = "util_test",
    srcs = ["panic_test.go"],
    embed = [":util"],
)
