load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "apply",
    srcs = ["apply.go"],
    importpath = "github.com/proofzero/kmdr/cmd/apply",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "@com_github_spf13_cobra//:cobra",
        "@org_cuelang_go//cue",
    ],
)

go_test(
    name = "apply_test",
    srcs = ["apply_test.go"],
    embed = [":apply"],
    deps = [
        "//api",
        "@com_github_golang_mock//gomock",
        "@org_cuelang_go//cue",
        "@org_cuelang_go//cue/cuecontext",
    ],
)
