load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "apply",
    srcs = ["apply.go"],
    importpath = "github.com/proofzero/kmdr/cmd/apply",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//vendor/cuelang.org/go/cue",
        "//vendor/github.com/spf13/cobra",
    ],
)

go_test(
    name = "apply_test",
    srcs = ["apply_test.go"],
    embed = [":apply"],
    deps = [
        "//api",
        "//vendor/cuelang.org/go/cue",
        "//vendor/cuelang.org/go/cue/cuecontext",
        "//vendor/github.com/golang/mock/gomock",
    ],
)
