load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "apply",
    srcs = ["apply.go"],
    importpath = "github.com/proofzero/kmdr/cmd/apply",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//util",
        "@com_github_spf13_cobra//:cobra",
    ],
)
