load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "setup",
    srcs = ["setup.go"],
    importpath = "github.com/proofzero/kmdr/cmd/setup",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//util",
        "//vendor/github.com/mitchellh/go-homedir",
        "//vendor/github.com/spf13/cobra",
    ],
)

go_test(
    name = "setup_test",
    srcs = ["setup_test.go"],
    embed = [":setup"],
)
