load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "version",
    srcs = ["version.go"],
    importpath = "github.com/proofzero/kmdr/cmd/version",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/spf13/cobra"],
)

go_test(
    name = "version_test",
    srcs = ["version_test.go"],
    embed = [":version"],
    deps = ["//vendor/github.com/spf13/cobra"],
)
