load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "version",
    srcs = ["version.go"],
    embedsrcs = ["version.txt"],
    importpath = "github.com/proofzero/kmdr/cmd/version",
    visibility = ["//visibility:public"],
    deps = ["@com_github_spf13_cobra//:cobra"],
)

go_test(
    name = "version_test",
    srcs = ["version_test.go"],
    embed = [":version"],
    deps = ["@com_github_spf13_cobra//:cobra"],
)
